--- a/Sun Tours-Website/boekingen_Tussen_Pagina.html
+++ b/Sun Tours-Website/boekingen_Tussen_Pagina.html
@@ -6,6 +6,7 @@
   <title>Sun Tours</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
   <script src="node_modules/jquery/dist/jquery.js"></script>
@@ -61,7 +62,7 @@
     </div>
   </nav>
   <div class="header2">
-    <h1>Bevestigingspagina</h1><br>
+    <h1>Bevestigen</h1><br>
   </div>
   <main>
     <div class="container mt-5 mb-5">
