--- a/Sun Tours-Website/passwordChange.html
+++ b/Sun Tours-Website/passwordChange.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Sun Tours</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
   <script src="node_modules/jquery/dist/jquery.js"></script>
@@ -15,11 +17,11 @@
   <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
   <script>
     Weglot.initialize({
-        api_key: 'wg_e0862d6fccddf79b84908b2ed4ee35a62'
+      api_key: 'wg_e0862d6fccddf79b84908b2ed4ee35a62'
     });
-</script>
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet"> 
+  </script>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet">
 </head>
 
 <body class="password_Background">
@@ -52,7 +54,7 @@
           <a class="nav-link" href="php/boekingsGeschiedenis.php">boekingen overzicht</a>
         </li>
         <li class="nav-item" id='logout_li'>
-          <form method="POST" id="logoutForm"  >
+          <form method="POST" id="logoutForm">
             <input type="submit" id="logout" name="logout" value="Log uit" class="btn btn-sm btn-outline-secondary">
           </form>
         </li>
@@ -60,19 +62,20 @@
     </div>
   </nav>
   <div class="Passwordheader">
-        <h1>Wachtwoord aanpassen</h1>
-    </div>
+    <h1>Wachtwoord aanpassen</h1>
+  </div>
   <main>
 
     <div class="c-form__progress"></div>
 
     <div class="wrapper">
 
-        <form method="POST" id="pswrdSendCode">
-            <label>Uw e-mail:</label><br>
-            <input type="text" class="contactInput" id="codeEmail" name="codeEmail" placeholder="E-mail"><br><br>
-            <input type="submit" class="buttonContact" name="sendCodeButton" id="sendCodeButton" value="Verstuur code" class="sendKnop">
-        </form>
+      <form method="POST" id="pswrdSendCode">
+        <label>Uw e-mail:</label><br>
+        <input type="text" class="contactInput" id="codeEmail" name="codeEmail" placeholder="E-mail"><br><br>
+        <input type="submit" class="buttonContact" name="sendCodeButton" id="sendCodeButton" value="Verstuur code"
+          class="sendKnop">
+      </form>
 
       <form method="POST" id="changePswrd">
 
@@ -81,51 +84,51 @@
         <label class="size">Uw Nieuwe wachtwoord:</label><br>
         <input type="password" class="contactInput" id="newPswrd" name="newPswrd" placeholder="Wachtwoord"><br><br>
         <label class="size">Bevestig wachtwoord:</label><br>
-        <input type="password" class="contactInput" id="confPaswrd" name="confPaswrd" placeholder="Bevestig wachtwoord:"><br><br>
+        <input type="password" class="contactInput" id="confPaswrd" name="confPaswrd"
+          placeholder="Bevestig wachtwoord:"><br><br>
         <label class="size">Uw e-mail:</label><br>
         <input type="text" class="contactInput" id="pswrdEmail" name="pswrdEmail" placeholder="E-mail"><br><br>
 
-        <input type="submit" class="buttonContact" value="Verander" name="verifyButton" id="verifyButton" class="sendKnop">
+        <input type="submit" class="buttonContact" value="Verander" name="verifyButton" id="verifyButton"
+          class="sendKnop">
       </form>
 
     </div>
-   
+
 
   </main>
 
 </body>
 
- <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
- <footer id="passwordFooter">
-    <!-- start topfooter -->
-    <div class="topFooter">
-      <div class="row">
-        <div class="col-5 mx-4 mb-1">
-          <a>Suntours</a></br>
-          <a>Bredeweg 235, 6042 GE Roermond</a></br>
-          <a>06-13022010</a></br>
-          <a>088 2365148</a></br>
-        </div>
-        <div class="col-3 mx-3 mt-3">
-          <div class="row mx-1">
-            <a href=""><img class="img-fluid" src="images/facebook.png" alt="x"
-              style="width: 60px;"></a>
-              <a href=""><img class="img-fluid" src="images/twitter.png" alt="x"
-                style="width: 60px;"></a>
-        <div class="mt-1 mx-1">      
-            <a href=""><img class="img-fluid" src="images/youtube.png" alt="x"
-              style="width: 53px;"></a>
+<!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
+<footer id="passwordFooter">
+  <!-- start topfooter -->
+  <div class="topFooter">
+    <div class="row">
+      <div class="col-5 mx-4 mb-1">
+        <a>Suntours</a></br>
+        <a>Bredeweg 235, 6042 GE Roermond</a></br>
+        <a>06-13022010</a></br>
+        <a>088 2365148</a></br>
+      </div>
+      <div class="col-3 mx-3 mt-3">
+        <div class="row mx-1">
+          <a href=""><img class="img-fluid" src="images/facebook.png" alt="x" style="width: 60px;"></a>
+          <a href=""><img class="img-fluid" src="images/twitter.png" alt="x" style="width: 60px;"></a>
+          <div class="mt-1 mx-1">
+            <a href=""><img class="img-fluid" src="images/youtube.png" alt="x" style="width: 53px;"></a>
           </div>
-        </div>
         </div>
       </div>
     </div>
-    <!-- einde topfooter -->
+  </div>
+  <!-- einde topfooter -->
 
-    <!-- start bottom footer -->
-    <div class="bottomFooter">
-      copyright &copy; 2021 <i>Ontworpen door: Thomas-Thomas-Stef-Lucas</i>
-    </div>
-    <!-- bottom footer -->
-  </footer>
+  <!-- start bottom footer -->
+  <div class="bottomFooter">
+    copyright &copy; 2021 <i>Ontworpen door: Thomas-Thomas-Stef-Lucas</i>
+  </div>
+  <!-- bottom footer -->
+</footer>
+
 </html>
