--- a/Sun Tours-Website/FAQ.html
+++ b/Sun Tours-Website/FAQ.html
@@ -5,6 +5,7 @@
   <title>Sun Tours</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
   <script src="node_modules/jquery/dist/jquery.js"></script>
@@ -12,18 +13,18 @@
   <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
   <script src="Javascript/ajax.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet">
   <style>
     .fakeimg {
       height: 200px;
       background: #aaa;
     }
   </style>
-    <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
-    <script>
-      Weglot.initialize({
-          api_key: 'wg_e0862d6fccddf79b84908b2ed4ee35a62'
-      });
+  <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+  <script>
+    Weglot.initialize({
+      api_key: 'wg_e0862d6fccddf79b84908b2ed4ee35a62'
+    });
   </script>
 </head>
 
@@ -57,7 +58,7 @@
           <a class="nav-link" href="php/boekingsGeschiedenis.php">boekingen overzicht</a>
         </li>
         <li class="nav-item" id='logout_li'>
-          <form method="POST" id="logoutForm"  >
+          <form method="POST" id="logoutForm">
             <input type="submit" id="logout" name="logout" value="Log uit" class="btn btn-sm btn-outline-secondary">
           </form>
         </li>
@@ -66,9 +67,9 @@
   </nav>
   <div class="header_faq">
     <h1>FAQ</h1><br>
-    </div>
+  </div>
   <main>
-   
+
     <div class="container py-3 faq_height">
       <div class="row">
         <div class="col-10 mx-auto">
@@ -127,7 +128,7 @@
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                     data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                   Hoe annuleer ik een reis?
+                    Hoe annuleer ik een reis?
                   </button>
                 </h5>
               </div>
@@ -219,15 +220,15 @@
                 </div>
               </div>
             </div>
+          </div>
         </div>
       </div>
-</div>
-</div>
-      <!--/row-->
+    </div>
+    <!--/row-->
   </main>
 </body>
 <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
-<footer id="faqFooterFix">
+<footer class="contact_footer">
   <!-- start topfooter -->
   <div class="topFooter">
     <div class="row">
