--- a/Sun Tours-Website/FAQ.html
+++ b/Sun Tours-Website/FAQ.html
@@ -228,7 +228,7 @@
   </main>
 </body>
 <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
-<footer class="contact_footer">
+<footer class="faqFooterFix ">
   <!-- start topfooter -->
   <div class="topFooter">
     <div class="row">
