--- a/Sun Tours-Website/activatie.html
+++ b/Sun Tours-Website/activatie.html
@@ -48,7 +48,7 @@
           <a class="nav-link" href="FAQ.html">FAQ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Review.html">Review</a>
+          <a class="nav-link" href="../Sun Tours-Website/php/Review.php">Review</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="php/boekingsGeschiedenis.php">boekingen overzicht</a>
