radio buttons booking fixed

--- a/Sun Tours-Website/boekingen.html
+++ b/Sun Tours-Website/boekingen.html
@@ -106,14 +106,14 @@
 
           <label>Vliegen:</label><br>
           <input type="radio" id="vervoer" name="vervoer" onclick="show_vervoer()">ja
-          <input type="radio" id="geen_vervoer" name="vervoer" onclick="hide_vervoer()">nee<Br><Br>
+          <input type="radio" id="geen_vervoer" name="vervoer" checked onclick="hide_vervoer()">nee<Br><Br>
           <div id="vliegen_div">
   
           </div>
           <div id="autoVerhuur">
             <label>AutoVerhuur:</label><br>
             <input type="radio" id="show_autoverhuur1" name="autoverhuur" onclick="show_autoverhuur()">ja
-            <input type="radio" id="hide_autoverhuur2" name="autoverhuur" onclick="hide_autoverhuur()">nee<Br><Br>
+            <input type="radio" id="hide_autoverhuur2" name="autoverhuur" checked onclick="hide_autoverhuur()">nee<Br><Br>
           </div>
   
           <div id="autos">
@@ -137,7 +137,7 @@
           <div id="bus_deals" onchange="update_prices()">
             <label>Bus Deals</label><br>
             <input type="radio" id="show_bus_deals1" name="busverhuur" onchange="show_bus_deals()">ja
-            <input type="radio" id="hide_bus_deals2" name="busverhuur" onchange="hide_bus_deals()">nee<Br><Br>
+            <input type="radio" id="hide_bus_deals2" name="busverhuur" checked onchange="hide_bus_deals()">nee<Br><Br>
           </div>
     
           <div id="bus">
