laatste bugfixes booking

--- a/Sun Tours-Website/boekingen.html
+++ b/Sun Tours-Website/boekingen.html
@@ -99,10 +99,10 @@
               </option>
             </select><br><br>
           <label>Aantal volwassenen (18 jaar of ouder):</label><br>
-          <input type="number" min="0" id="aantal_volwassenen" onclick="update_prices()"
+          <input type="number" min="0" id="aantal_volwassenen" onchange="update_prices()"
             name="AantalVolwassenen"><Br><Br>
           <label>Aantal kinderen:</label><br>
-          <input type="number" min="0" id="aantal_kinderen" onclick="update_prices()"
+          <input type="number" min="0" id="aantal_kinderen" onchange="update_prices()"
             name="AantalKinderen"><Br><Br>
 
           <label>Vliegen:</label><br>
