--- a/Sun Tours-Website/aanmelden.html
+++ b/Sun Tours-Website/aanmelden.html
@@ -139,7 +139,7 @@
                       class="form-control registreer_input" id="address" name="address" placeholder="Adres"
                       class="input"></div>
                   <div class="form-group col-md-12"> <label for="City" class="label">Stad</label><input type="text"
-                      class="form-control registreer_input" id="address" name="City" placeholder="Stad" class="input">
+                      class="form-control registreer_input" id="City" name="City" placeholder="Stad" class="input">
                   </div>
                   <div class="form-group col-md-12"> <label for="pass" class="label">Wachtwoord</label> <input
                       type="password" class="form-control registreer_input" id="passwd2" name="passwd2" placeholder="Wachtwoord"
